--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "postcss public/css/styles.css -o public/css/build/styles.css"
+    "dev": "postcss public/css/styles.css -o public/css/build/styles.css",
+    "prod": "postcss public/css/styles.css -o public/css/build/styles.css"
   },
   "repository": {
     "type": "git",
