--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -1,5 +1,5 @@
 # Image
-FROM php:8.0.6-fpm
+FROM php:7.4.21-fpm
 
 # Starting from scratch
 RUN apt-get clean
@@ -30,9 +30,6 @@ RUN apt-get install -y libcurl3-dev curl && docker-php-ext-install curl
 RUN apt-get install -y libfreetype6-dev libjpeg62-turbo-dev libpng-dev
 RUN docker-php-ext-configure gd --with-freetype --with-jpeg
 RUN docker-php-ext-install gd
-
-# MySQL
-RUN apt-get install -y libpq-dev && docker-php-ext-install pdo pdo_mysql
 
 # Human Language and Character Encoding Support
 RUN apt-get install -y zlib1g-dev libicu-dev g++
@@ -68,8 +65,9 @@ ARG APP_ENV
 ARG APP_NAME
 WORKDIR /var/www/$APP_NAME
 #
-## Composer update
-RUN composer install
+## Composer install
+# COPY --from=composer /usr/bin/composer /usr/bin/composer
+# RUN composer install -o
 #
 ## Node install
-RUN npm run-script $APP_ENV
+# RUN npm run-script $APP_ENV
