--- a/.docker/prod/php/php.ini
+++ b/.docker/prod/php/php.ini
@@ -5,22 +5,22 @@ max_input_time = 1000
 ; Maximum allowed size for uploaded files.
 ; http://php.net/upload-max-filesize
 
-upload_max_filesize = 1000M
+upload_max_filesize = 100M
 
 ; Maximum size of POST data that PHP will accept.
 ; Its value may be 0 to disable the limit. It is ignored if POST data reading
 ; is disabled through enable_post_data_reading.
 ; http://php.net/post-max-size
 
-post_max_size = 1000M
+post_max_size = 200M
 
 date.timezone = "Europe/Moscow"
 
 ; Xdebug extension.
-xdebug.mode=debug
-xdebug.client_host=host.docker.internal
-xdebug.client_port=9001
-xdebug.remote_enable=1
+; xdebug.mode=debug
+; xdebug.client_host=host.docker.internal
+; xdebug.client_port=9001
+; xdebug.remote_enable=1
 
 ; Kafka extension.
 ; extension=rdkafka.so
