--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,7 +11,7 @@ services:
         ports:
             - 88:80
         volumes:
-            - .:/var/www/${APP_NAME}
+            # - .:/var/www/${APP_NAME}
             - .docker/prod/nginx/logs:/var/log/nginx
         links:
             - php
@@ -29,7 +29,7 @@ services:
               - APP_NAME=${APP_NAME}
         restart: always
         volumes:
-            - .:/var/www/${APP_NAME}
+            # - .:/var/www/${APP_NAME}
             - .docker/prod/php/php.ini:/usr/etc/php/php.ini
         networks:
             - ${APP_NAME}-network
