--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
             - .docker/dev/nginx/logs:/var/log/nginx
         links:
             - php
+        depends_on:
+            - php
         networks:
             - ${APP_NAME}-network
 
