--- a/.docker/prod/php/php.ini
+++ b/.docker/prod/php/php.ini
@@ -17,10 +17,10 @@ post_max_size = 200M
 date.timezone = "Europe/Moscow"
 
 ; Xdebug extension.
-; xdebug.mode=debug
-; xdebug.client_host=host.docker.internal
-; xdebug.client_port=9001
-; xdebug.remote_enable=1
+# xdebug.mode=debug
+# xdebug.client_host=host.docker.internal
+# xdebug.client_port=9001
+# xdebug.remote_enable=1
 
 ; Kafka extension.
 ; extension=rdkafka.so
