--- a/.docker/dev/nginx/default.conf
+++ b/.docker/dev/nginx/default.conf
@@ -11,7 +11,7 @@ server {
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
 
-    root /var/www/RMS;
+    root /var/www/rms;
 
     charset utf-8;
 
