--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RMS",
+  "name": "rms",
   "version": "1.0.0",
   "description": "Написана полностью с нуля с некоторыми выразками из других проектов",
   "main": "index.js",
