--- a/docker-compose.traefik.yml
+++ b/docker-compose.traefik.yml
@@ -17,7 +17,7 @@ services:
             - "traefik.enable=true"
             - "traefik.http.routers.${APP_NAME}.rule=Host(`${DOMAIN}`)"
             - "traefik.http.routers.${APP_NAME}.entrypoints=websecure"
-            - "traefik.http.routers.webserver.tls=true"
+            - "traefik.http.routers.${APP_NAME}webserver.tls=true"
             - "traefik.http.routers.${APP_NAME}.tls.certresolver=myresolver"
             - "traefik.port=80"
 
